@@ -1,10 +1,5 @@
 ##-*- org -*-->  Emacs .. [Tab] key + [Org] menu; C-c C-o to follow links
 
-* TODO Rename 'err.lambd*()' to 'ppoisErr*()';  put on same help page as ppoisD(); further
-** FIXME those, they currently *print* and compute;
-** use files  R/ppois-fn.R tests/ppois-ex.R man/ppoisErr.Rd NAMESPACE
-* TODO Document all these (or do _not_ export):
- ‘g2’ ‘gnt’ ‘h’ ‘h0’ ‘h1’ ‘h2’ ‘hnt’ ‘newton’ ‘nu.lam.expr’ ‘p.dnchiB’ ‘scalefactor’ ‘ss’ ‘ss2’ ‘ss2.’
 * TODO tests/chisq-nonc-ex.R : move "things" to a vignette / demo // use result file in inst/test // only if(doExtras)
 * TODO tests/qbeta-dist.R    : move "things" to a vignette / demo // use result file in inst/test // only if(doExtras)
 * TODO tests/qgamma-ex.R     : some parts only if(doExtras)
@@ -29,6 +24,11 @@
 * TODO tests/qbeta-dist.R (2): Shows how to compute  log(p*Beta(p,q)) accurately for p << q  very nice plots <=??=> Qab(), algdiv()??
 
 * TODO tests/qPoisBinom-ex.R:  *FIX* Bug in qpois / qbinom / qnbinom upper.tail|log.p
+* DONE Document these (or do _not_ export):  now --> man/pnchisqWienergerm.Rd
+  NB <--> ./wienergerm_README <<< ./R/wienergerm_nchisq-fn.R ./tests/wienergerm_nchisq.R
+ ‘g2’ ‘gnt’ ‘h’ ‘h0’ ‘h1’ ‘h2’ ‘hnt’ ‘newton’ ‘p.dnchiB’ ‘ss’ ‘ss2’ ‘ss2.’
+* DONE Rename 'err.lambd*()' to 'ppoisErr*()';  put on same help page as ppoisD(); further
+** DONE : only when verbose=TRUE, they still print
 * DONE lbeta.n(), lbeta.asy() .. __rename__;  add the two  *Qab*() functions to help page  man/lbeta.Rd
 * DONE qnormU*(): is "upper tail" qnorm ==>  use default arg  lower.tail=FALSE (but keep log.p=FALSE)
 * DONE s() is too short, not ok.  Maybe s_() or s.() ? --> using sW() now
