@@ -1,5 +1,6 @@
 \name{qnchisqAppr}
-\title{Compute Approximate Quantiles of Non-Central Chisquared Distribution}
+\alias{qnchisqAppr}% < even though have no such fn.name
+\title{Compute Approximate Quantiles of Noncentral Chi-Squared Distribution}
 %%     --------------------------------------------------------------------
 \alias{qchisqAppr.0}
 \alias{qchisqAppr.1}
@@ -9,8 +10,7 @@
 \alias{qchisqApprCF2}
 %-
 \alias{qchisqCappr.2}
-\alias{qchisq2}
-\alias{qchisqA}
+\alias{qchisqN}
 %-
 \alias{qnchisqAbdelAty}
 \alias{qnchisqPatnaik}
@@ -18,8 +18,10 @@
 \alias{qnchisqSankaran_d}
 \description{%% R code:    ../R/qnchisq.R
   %            %           --------------
-  Compute quantiles (inverse distribution values) for the non-central chi squared distribution.
-  using Johnson,Kotz,.. ............
+  Compute quantiles (inverse distribution values) for the \emph{non-central}
+  chi-squared distribution.
+
+  ....... using Johnson,Kotz,  and other approximations ..............
 }
 \usage{
 qchisqAppr.0 (p, df, ncp = 0, lower.tail = TRUE, log.p = FALSE)
@@ -30,8 +32,7 @@ qchisqApprCF1(p, df, ncp = 0, lower.tail = TRUE, log.p = FALSE)
 qchisqApprCF2(p, df, ncp = 0, lower.tail = TRUE, log.p = FALSE)
 
 qchisqCappr.2 (p, df, ncp = 0, lower.tail = TRUE, log.p = FALSE)
-qchisq2       (p, df, ncp = 0, eps = 1e-04)
-qchisqA       (p, df, ncp = 0, eps = 1e-04, qIni = qchisqAppr.0)
+qchisqN       (p, df, ncp = 0, qIni = qchisqAppr.0, \dots)
 
 qnchisqPatnaik   (p, df, ncp = 0, lower.tail = TRUE, log.p = FALSE)
 qnchisqAbdelAty  (p, df, ncp = 0, lower.tail = TRUE, log.p = FALSE)
@@ -46,11 +47,32 @@ qnchisqSankaran_d(p, df, ncp = 0, lower.tail = TRUE, log.p = FALSE)
   \item{lower.tail, log.p}{logical, see, e.g., \code{\link{qchisq}()}.}
 %%% TODO: \item{method}{a string specifying the approximation method to be used.}
 %%% -----  INSTEAD of all these functions ??
-  \item{eps}{....replace..with..tol...........TODO............}
-  \item{qIni}{auxiliary \code{\link{function}} ...}
+  \item{qIni}{a \code{\link{function}} that computes an approximate
+    noncentral chi-squared quantile as starting value \code{x0} for the
+    Newton algorithm \code{\link{newton}()}.}
+  \item{\dots}{further arguments to \code{\link{newton}()}, notably
+    \code{eps} or \code{maxiter}.}
 }
-%% \details{
-%% }
+\details{
+  \describe{
+    \item{qchisqAppr.0():}{ ...TODO... }
+    \item{qchisqAppr.1():}{ ...TODO... }
+    \item{qchisqAppr.2():}{ ...TODO... }
+    \item{qchisqAppr.3():}{ ...TODO... }
+    \item{qchisqApprCF1():}{ ...TODO... }
+    \item{qchisqApprCF2():}{ ...TODO... }
+
+    \item{qchisqCappr.2():}{ ...TODO... }
+    \item{qchisqN():}{Uses Newton iterations with \code{\link{pchisq}()}
+      and \code{\link{dchisq}()} to determine \code{\link{qchisq}(.)} values.}
+
+    \item{qnchisqPatnaik():}{ ...TODO... }
+    \item{qnchisqAbdelAty():}{ ...TODO... }
+    \item{qnchisqPearson():}{ ...TODO... }
+    \item{qnchisqSankaran_d():}{ ...TODO... }
+
+  }
+}
 \value{
   ...
 }
@@ -68,7 +90,7 @@ qnchisqSankaran_d(p, df, ncp = 0, lower.tail = TRUE, log.p = FALSE)
  pp <- c(.001, .005, .01, .05, (1:9)/10, .95, .99, .995, .999)
  pkg <- "package:DPQ"
  qnchNms <- c(paste0("qchisqAppr.",0:3), paste0("qchisqApprCF",1:2),
-              paste0("qchisq", c("Cappr.2", "2", "A")), ls(pkg, pattern = "^qnchisq"))
+              "qchisqN", "qchisqCappr.2", ls(pkg, pattern = "^qnchisq"))
  qnchF <- sapply(qnchNms, get, envir = as.environment(pkg))
  for(ncp in c(0, 1/8, 1/2)) {
    cat("\n~~~~~~~~~~~~~\nncp: ", ncp,"\n=======\n")
